# bevy-asset-distill

./: .gitignore  .rustfmt.toml  Cargo.toml
assets/: a.scene.ron  custom_asset.casset  custom_asset.ron  lorem_ipsum.txt  material.bmat  material.ron  test.component.ron
assets/deserialize_handle/: test.mat  test.tex
examples/: custom_asset.rs  custom_asset_loader.rs  custom_asset_packfile.rs  deserialize_handle.rs  insert_manually.rs  load_material.rs  load_status.rs  reflect_component.rs  run_asset_daemon.rs  scene_inline_assets.rs
resources/: assets.pack
src/: asset_server.rs  handle.rs  importer.rs  lib.rs  plugin.rs  storage.rs  util.rs
src/importer/: mod.rs  ron_importer.rs  text_importer.rs
