[package]
name = "bevy_asset_distill"
version = "0.1.0"
edition = "2021"

[features]
asset-daemon = ["distill-daemon", "distill-loader/rpc_io"]
packfile = ["distill-loader/packfile_io"]
serde-importers = ["distill-importer/serde_importers"]
ron-importer = ["ron"]

[dependencies]
bevy_ecs = { git = "https://github.com/bevyengine/bevy" }
bevy_app = { git = "https://github.com/bevyengine/bevy" }
bevy_reflect = { git = "https://github.com/bevyengine/bevy" }
bevy_utils = { git = "https://github.com/bevyengine/bevy" }
bevy_log = { git = "https://github.com/bevyengine/bevy" }

distill-core = { git = "https://github.com/amethyst/distill", features = ["type_uuid"] }
distill-loader = { git = "https://github.com/amethyst/distill", features = ["handle"] }
distill-importer = { git = "https://github.com/amethyst/distill" }
distill-daemon = { git = "https://github.com/amethyst/distill", optional = true }

serde = "1.0"
bincode = "1.3"
futures-executor = "0.3"
uuid = "0.8"

ron = { version = "0.6", optional = true }

[dev-dependencies]
image = { version = "0.23", default-features = false, features = ["png"] }

[[example]]
name = "custom_asset"
required-features = ["serde-importers", "asset-daemon"]

[[example]]
name = "load_status"
required-features = ["serde-importers", "asset-daemon"]

[[example]]
name = "custom_asset_packfile"
required-features = ["serde-importers", "packfile"]

[[example]]
name = "custom_asset_loader"
required-features = ["asset-daemon"]

[[example]]
name = "load_material"
required-features = ["serde-importers", "asset-daemon"]

[[example]]
name = "deserialize_handle"
required-features = ["asset-daemon", "ron-importer"]

[[example]]
name = "run_asset_daemon"
required-features = ["asset-daemon"]

[patch."https://github.com/amethyst/distill"]
distill-core = { git = "https://github.com/jakobhellermann/distill", branch = "compile-on-wasm" }
distill-loader = { git = "https://github.com/jakobhellermann/distill", branch = "compile-on-wasm" }
distill-importer = { git = "https://github.com/jakobhellermann/distill", branch = "compile-on-wasm" }
distill-daemon = { git = "https://github.com/jakobhellermann/distill", branch = "compile-on-wasm" }