[package]
name = "bevy_asset_distill"
version = "0.1.0"
edition = "2021"

[features]
asset-daemon = ["distill-daemon", "rpc-io"]
packfile = ["distill-loader/packfile_io"]
serde-importers = ["distill-importer/serde_importers"]
rpc-io = ["distill-loader/rpc_io"]
ron-importer = ["ron"]

[dependencies]
bevy_ecs = { git = "https://github.com/bevyengine/bevy" }
bevy_app = { git = "https://github.com/bevyengine/bevy" }
bevy_reflect = { git = "https://github.com/bevyengine/bevy" }
bevy_utils = { git = "https://github.com/bevyengine/bevy" }
bevy_log = { git = "https://github.com/bevyengine/bevy" }

distill-core = { git = "https://github.com/amethyst/distill", features = ["type_uuid"] }
distill-loader = { git = "https://github.com/amethyst/distill", features = ["handle"] }
distill-importer = { git = "https://github.com/amethyst/distill" }
distill-daemon = { git = "https://github.com/amethyst/distill", optional = true }

serde = "1.0"
bincode = "1.3"
futures-executor = "0.3"
uuid = "0.8"

ron = { version = "0.6", optional = true }

[dev-dependencies]
image = { version = "0.23", default-features = false, features = ["png"] }
tracing-subscriber = "0.2"
tracing = "0.1"
tracing-log = "0.1"

[[example]]
name = "custom_asset"
required-features = ["serde-importers", "rpc-io"]

[[example]]
name = "load_status"
required-features = ["serde-importers", "rpc-io"]

[[example]]
name = "custom_asset_packfile"
required-features = ["packfile"]

[[example]]
name = "custom_asset_loader"
required-features = ["rpc-io"]

[[example]]
name = "load_material"
required-features = ["serde-importers", "rpc-io"]

[[example]]
name = "deserialize_handle"
required-features = ["rpc-io", "ron-importer"]

[[example]]
name = "run_asset_daemon"
required-features = ["asset-daemon"]

[patch."https://github.com/amethyst/distill"]
distill-core = { git = "https://github.com/jakobhellermann/distill", branch = "dev" }
distill-loader = { git = "https://github.com/jakobhellermann/distill", branch = "dev" }
distill-importer = { git = "https://github.com/jakobhellermann/distill", branch = "dev" }
distill-daemon = { git = "https://github.com/jakobhellermann/distill", branch = "dev" }