[package]
name = "bevy_asset"
license = "MIT OR Apache-2.0"
version = "0.5.0"
edition = "2021"

[features]
asset-daemon = ["distill-daemon", "rpc-io"]
packfile = ["distill-loader/packfile_io"]
rpc-io = ["distill-loader/rpc_io"]
ron-importer = ["ron"]

[dependencies]
bevy_ecs = { git = "https://github.com/bevyengine/bevy" }
bevy_app = { git = "https://github.com/bevyengine/bevy" }
bevy_reflect = { git = "https://github.com/bevyengine/bevy", features = ["bevy"] }
bevy_utils = { git = "https://github.com/bevyengine/bevy" }
bevy_log = { git = "https://github.com/bevyengine/bevy" }

distill-core = { git = "https://github.com/jakobhellermann/distill", branch = "dev", features = ["bevy_reflect"] }
distill-loader = { git = "https://github.com/jakobhellermann/distill", branch = "dev", features = ["handle"] }
distill-importer = { git = "https://github.com/jakobhellermann/distill", branch = "dev" }
distill-daemon = { git = "https://github.com/jakobhellermann/distill", branch = "dev", optional = true }

serde = "1.0"
bincode = "1.3"
futures-executor = "0.3"
uuid = "0.8"

ron = { version = "0.6", optional = true }

[dev-dependencies]
image = { version = "0.23", default-features = false, features = ["png"] }
tracing-subscriber = "0.2"
tracing = "0.1"
tracing-log = "0.1"
ron = "0.6"
bevy_core = { git = "https://github.com/bevyengine/bevy" }

[[example]]
name = "custom_asset"
required-features = ["ron-importer", "rpc-io"]

[[example]]
name = "load_status"
required-features = ["ron-importer", "rpc-io"]

[[example]]
name = "custom_asset_packfile"
required-features = ["packfile"]

[[example]]
name = "custom_asset_loader"
required-features = ["rpc-io"]

[[example]]
name = "load_material"
required-features = ["ron-importer", "rpc-io"]

[[example]]
name = "deserialize_handle"
required-features = ["ron-importer", "rpc-io"]

[[example]]
name = "scene_inline_assets"
required-features = ["ron-importer", "rpc-io"]

[[example]]
name = "run_asset_daemon"
required-features = ["asset-daemon"]

[[example]]
name = "reflect_component"
required-features = ["rpc-io"]

[patch."https://github.com/bevyengine/bevy"]
bevy_ecs = { git = "https://github.com/jakobhellermann/bevy", branch = "bevy-asset-distill" }
bevy_reflect = { git = "https://github.com/jakobhellermann/bevy", branch = "bevy-asset-distill" }
bevy_log = { git = "https://github.com/jakobhellermann/bevy", branch = "bevy-asset-distill" }
bevy_utils = { git = "https://github.com/jakobhellermann/bevy", branch = "bevy-asset-distill" }
bevy_app = { git = "https://github.com/jakobhellermann/bevy", branch = "bevy-asset-distill" }
bevy_core = { git = "https://github.com/jakobhellermann/bevy", branch = "bevy-asset-distill" }